[package]
name = "rusq"
version = "0.1.1"
authors = ["Hajime Fukuda <hajime.fukuda@me.com>"]
repository = "https://github.com/hajifkd/rusq"
keywords = ["quantum-computing"]
license = "MIT"
readme = "README.md"
description = "Quantum computing simulator library in Rust"

[dependencies]
num = "0.1"
rand = "0.4"
ndarray = "0.11.0"
lazy_static = "1.0"

[dev-dependencies]
permutohedron = "0.2"